# IntercambiaLoteria_NextJs_Django_PostgreSql

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  flujosSolicitudes.txt  pyproject.toml
client/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/(pages)/iniciar-sesion/: page.tsx
client/src/app/(pages)/login/: page.tsx
client/src/app/(pages)/profile/: page.tsx
client/src/app/(pages)/registro/: page.tsx
client/src/app/core/api/: auth.ts  data.ts
client/src/app/core/common/: local-storage.ts
client/src/app/core/components/Header/: HeaderComponent.tsx
client/src/app/core/components/home/: home-component.tsx
client/src/app/core/components/login/: login_form.tsx
client/src/app/core/components/profile/: profile-container.tsx  userDataContainer.tsx
client/src/app/core/components/register/: registerSchema.ts  register_form.module.scss  register_form.tsx
client/src/app/core/components/statics/Footer/: FooterComponent.tsx
client/src/app/core/components/statics/Header/: HeaderComponent.tsx
client/src/app/core/constants/: data.ts  index.ts  local-storage.ts
client/src/app/core/context/: auth.context.tsx
client/src/app/core/hooks/: useScreenDetector.ts
client/src/app/core/interfaces/: user.interface.ts
client/src/app/register/: page.tsx
db/: Dockerfile
server/: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  requirements.txt
server/administracion/: api.py  models.py  serializers.py  urls.py  views.py
server/administracion/migrations/: 0004_initial.py  0005_remove_propietario_tipo_propietarario_and_more.py  0006_remove_administracion_propietario_and_more.py
server/boleto/: apps.py  models.py  serializers.py  urls.py  views.py
server/boleto/migrations/: 0001_initial.py
server/core/: constants.py  exceptions.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
server/core/fixtures/: paises_data.json
server/core/management/commands/: 2024_sorteos.csv  import_sorteos.py
server/core/migrations/: 0001_initial.py
server/django_backend/: manage.py  run.sh
server/django_backend/Administracion/: apps.py  models.py
server/django_backend/django_backend/: settings.py
server/django_server/: asgi.py  settings.py  urls.py  wsgi.py
server/geo/: models.py
server/geo/fixtures/: geo_data.json
server/intercambios/: apps.py  constants.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
server/intercambios/management/commands/: import_sorteos.py
server/intercambios/migrations/: 0001_initial.py  0002_rename_solicitudrespuesta_respuesta.py
server/usuario/: constants.py  models.py  serializers.py  urls.py  views.py
server/usuario/migrations/: 0001_initial.py  0002_alter_administracion_provincia.py  0002_alter_usuario_dni.py  0003_alter_administracion_provincia.py  0003_rename_id_administracion_usuario_administracion.py  0004_alter_administracion_provincia.py  0005_alter_administracion_provincia.py
