[project]
requires-python = ">=3.12"

[tool.ruff]
line-length = 120
target-version = "py312"

exclude = [
    # Common directories and files to exclude
    ".git",              # Version control folder
    ".venv",             # Virtual environment folder
    "venv",              # Alternative virtual environment folder
    "__pycache__",       # Python bytecode cache
    "*.pyc",             # Compiled Python files
    "*.pyo",             # Compiled Python files
    "*.min.js",          # Minified JavaScript files
    "node_modules",      # Node.js dependencies folder
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".vscode",
    ".env",

    # Frontend build directories (if applicable)
    "client/build",      # Common frontend build output directory
    "client/dist",       # Common frontend distribution folder
    "static/",           # Django static files

    # Django-specific folders
    "server/**/migrations",  # Django migrations in all apps within the server folder
    "server/**/migrations/**",  # Individual migration files within each app
]


[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
select = ["I", "B", "Q", "E", "F", "W"] # select = ["E", "F", "W", "I", "B", "C", "Q", "N"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-third-party = ["django", "rest_framework", "simple_history", "rest_framework_simplejwt", "django_filters"]  # Customize third-party packages as needed
default-section = "THIRDPARTY"
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
line-ending = "lf"
skip-magic-trailing-comma = true
